nullaway_error_85C5D928-2182-418F-96FB-16608DEC402E.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-context/src/main/java/org/springframework/context/annotation/TypeFilterUtils.java:80: error: [NullAway] switch expression filterType is @Nullable
			switch (filterType) {
			        ^
    (see http://t.uber.com/nullaway )
